--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
@@ -473,6 +473,11 @@
   .layers-tools-expanded .sxt-layertree {
     height: @tmp-max-height;
   }
+  #importLayer .panel-carousel {
+    .mCSB_container { min-height: 100%; }
+    min-height: @tmp-max-height;
+    max-height: @tmp-max-height + @tmp-max-height;
+  }
   .sxt-maximize-layer-tools {
     .sxt-layertree {
       display: none;
@@ -484,6 +489,9 @@
 
   @media (max-height: 866px) {
     @tmp-max-height: 300px;
+    #importLayer .panel-carousel {
+      max-height: @tmp-max-height + @tmp-max-height;
+    }
     .sxt-layers-tabset {
       height: @tmp-max-height;
     }
@@ -501,6 +509,10 @@
 
   @media (max-height: 766px) {
     @tmp-max-height: 250px;
+    #importLayer .panel-carousel {
+      min-height: @tmp-max-height;
+      max-height: @tmp-max-height + @tmp-max-height;
+    }
     .sxt-layers-tabset {
       height: @tmp-max-height;
     }
@@ -518,6 +530,10 @@
 
   @media (max-height: 666px) {
     @tmp-max-height: 200px;
+    #importLayer .panel-carousel {
+      min-height: @tmp-max-height;
+      max-height: @tmp-max-height + @tmp-max-height;
+    }
     .sxt-layers-tabset {
       height: @tmp-max-height;
     }
