--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -118,6 +118,11 @@
 
 .gn [sxt-main-viewer] {
   @tmp-max-height: 200px;
+  #importLayer .panel-carousel {
+    .mCSB_container { min-height: 100%; }
+    min-height: @tmp-max-height;
+    max-height: @tmp-max-height + @tmp-max-height;
+  }
   .sxt-layers-tabset {
     height: @tmp-max-height;
   }
@@ -138,6 +143,9 @@
 @media (max-height: 866px) {
   .gn [sxt-main-viewer] {
     @tmp-max-height: 150px;
+    #importLayer .panel-carousel {
+      max-height: @tmp-max-height + @tmp-max-height;
+    }
     .sxt-layers-tabset {
       height: @tmp-max-height;
     }
@@ -157,6 +165,9 @@
 @media (max-height: 766px) {
   .gn [sxt-main-viewer] {
     @tmp-max-height: 100px;
+    #importLayer .panel-carousel {
+      max-height: @tmp-max-height + @tmp-max-height;
+    }
     .sxt-layers-tabset {
       height: @tmp-max-height;
     }
@@ -176,6 +187,9 @@
 @media (max-height: 666px) {
   .gn [sxt-main-viewer] {
     @tmp-max-height: 50px;
+    #importLayer .panel-carousel {
+      max-height: @tmp-max-height + @tmp-max-height;
+    }
     .sxt-layers-tabset {
       height: @tmp-max-height;
     }
